cmake_minimum_required(VERSION 3.14)
project(node_cpp_addon)
set(CMAKE_CXX_STANDARD 14)
# .node-gyp
include_directories(C:/Users/20311/.node-gyp/11.13.0/include/node)
include_directories(node_modules/nan)
include_directories(node_modules/node-addon-api)
AUX_SOURCE_DIRECTORY(. CUR_DIR)
add_subdirectory(./lib)
add_executable(node_cpp_addon ${CUR_DIR} example05.cpp nan_example01.cpp nan_example02.cpp napi_example01.cpp node_addon_api_example01.cpp)
